# Structural-Programming

./: CMakeLists.txt  Recordings.txt  main.c
Auditory_Exercises/10.Strings/: New Text Document.txt  Strings.docx  aud.txt  task1.c  task2.c  task3.c  task4.c  task5.c  task6.c  task7.c  task8.c  task9.c
Auditory_Exercises/11.Files/: Files  Files.docx  task1.c  task2.c  task3.c  task4.c  task5.c  task6.c
Auditory_Exercises/2.Simple_C_program_structure_&_C_Functions_&_Comments/: task1.c  task10.c  task2.c  task3.c  task4.c  task5.c  task6.c  task7.c  task8.c  task9.c
Auditory_Exercises/3.Relational_Logical_And_Additional_Operators/: Intro Exercises.docx  task1.c  task2.c  task3.c  task4.c  task5.c  task6.c  task7.c
Auditory_Exercises/4.If_&_else_statements_&_switch_expression/: Exercises.docx  If else switch.docx  Switch statement.docx  task1.c  task10.c  task2.c  task3.c  task4.c  task5.c  task6.c  task7.c  task8.c  task9.c
Auditory_Exercises/5.Loops/: Loops.docx  task1.c  task10.c  task11.c  task12.c  task13.c  task2.c  task3.c  task4.c  task5.c  task6.c  task7.c  task8.c  task9.c
Auditory_Exercises/6.Arrays/: Arrays.docx  task1.c  task2.c  task3.c  task4.c  task5.c  task6.c  task7.c
Auditory_Exercises/7.Matrices/: Matrices.docx  New Text Document.txt  task1.c  task2.c  task3.c
Auditory_Exercises/8.Functions_Recursions/: Exercises.docx  Functions.docx  Recursive functions.docx  task1.c  task2.c  task3.c  task4.c  task5.c  task6.c  taskR1.c  taskR2.c  taskR3.c  taskR4.c  taskR5.c  taskR6.c  taskR7.c
Auditory_Exercises/9.Pointers/: BubbleSort.c  Linear_&_Binary_Search.c  Pointer_Example1.c  Pointer_Example2.c  Pointers.docx  task1.c  task2.c
Exams/: 1st mindterm, 2nd midterm & exams.txt  Exams, labs.txt
Exams/1st_midterm/: 1st midterm.docx  1st-midterm.md  1stMideterm2022.md  1stMidterm2022_task1.c  1stMidterm2022_task2.c  My exam.docx  task10.c  task11.c  task13.c  task14.c  task16.c  task17.c  task18.c  task19.c  task2.c  task20.c  task21.c  task22.c  task23.c  task24.c  task25.c  task26.c  task27.c  task28.c  task29.c  task3.c  task30.c  task31.c  task32.c  task33.c  task34.c  task35.c  task36.c  task37.c  task38.c  task39.c  task4.c  task40.c  task41.c  task42.c  (+6 more)
Exams/2nd_midterm_and_exams/: 2nd midterm & exams.docx  Exam2022_Group1_task1.c  Exam2022_Group1_task2.c  Exam2022_Group1_task3.c  Exam2022_Group2_task1.c  Exam2022_Group2_task2.c  Exam2022_Group2_task3.c  Exams 2022.docx  task1.c  task10.c  task11.c  task12.c  task13.c  task14.c  task15.c  task16.c  task17.c  task18.c  task19.c  task2.c  task20.c  task21.c  task22.c  task23.c  task24.c  task25.c  task26.c  task27.c  task28.c  task29.c  task3.c  task30.c  task31.c  task32.c  task33.c  task34.c  task35.c  task36.c  task37.c  task38.c  (+14 more)
Exams/2nd_midterm_and_exams/Optional/: Exercises.docx  Function implementation.docx  Useful functions.docx
Lab_Exercises/: My labs.docx
Lab_Exercises/Lab_1/: Lab1.md  task1.c  task2.c  task3.c
Lab_Exercises/Lab_10/: Lab10.md  task1.c  task2.c  task3.c
Lab_Exercises/Lab_2/: Lab2.md  task1.c  task2.c  task3.c
Lab_Exercises/Lab_3/: Lab3.md  task2.c
Lab_Exercises/Lab_4/: Lab4.md  task1.c  task2.c  task3.c
Lab_Exercises/Lab_5/: Lab5.md  task1.c  task2.c  task3.c
Lab_Exercises/Lab_6/: Lab6.md  task1.c  task2.c  task3.c
Lab_Exercises/Lab_7/: Lab7.md  task1.c  task2.c  task3.c
Lab_Exercises/Lab_8/: Lab8.md  task1.c  task2.c  task3.c
Lab_Exercises/Lab_9/: Lab9.md  task1.c  task2.c  task3.c
