cmake_minimum_required(VERSION 3.23)
project(Programming C)

set(CMAKE_C_STANDARD 99)

add_executable(Programming main.c)


add_executable(task1.2 Auditory_Exercises/2.Simple_C_program_structure_&_C_Functions_&_Comments/task1.c)
add_executable(task2.2 Auditory_Exercises/2.Simple_C_program_structure_&_C_Functions_&_Comments/task2.c)
add_executable(task3.2 Auditory_Exercises/2.Simple_C_program_structure_&_C_Functions_&_Comments/task3.c)
add_executable(task4.2 Auditory_Exercises/2.Simple_C_program_structure_&_C_Functions_&_Comments/task4.c)
add_executable(task5.2 Auditory_Exercises/2.Simple_C_program_structure_&_C_Functions_&_Comments/task5.c)
add_executable(task6.2 Auditory_Exercises/2.Simple_C_program_structure_&_C_Functions_&_Comments/task6.c)
add_executable(task7.2 Auditory_Exercises/2.Simple_C_program_structure_&_C_Functions_&_Comments/task7.c)
add_executable(task8.2 Auditory_Exercises/2.Simple_C_program_structure_&_C_Functions_&_Comments/task8.c)
add_executable(task9.2 Auditory_Exercises/2.Simple_C_program_structure_&_C_Functions_&_Comments/task9.c)
add_executable(task10.2 Auditory_Exercises/2.Simple_C_program_structure_&_C_Functions_&_Comments/task10.c)
add_executable(task1.3 Auditory_Exercises/3.Relational_Logical_And_Additional_Operators/task1.c)
add_executable(task2.3 Auditory_Exercises/3.Relational_Logical_And_Additional_Operators/task2.c)
add_executable(task3.3 Auditory_Exercises/3.Relational_Logical_And_Additional_Operators/task3.c)
add_executable(task4.3 Auditory_Exercises/3.Relational_Logical_And_Additional_Operators/task4.c)
add_executable(task5.3 Auditory_Exercises/3.Relational_Logical_And_Additional_Operators/task5.c)
add_executable(task6.3 Auditory_Exercises/3.Relational_Logical_And_Additional_Operators/task6.c)
add_executable(task7.3 Auditory_Exercises/3.Relational_Logical_And_Additional_Operators/task7.c)
add_executable(task1.4 Auditory_Exercises/4.If_&_else_statements_&_switch_expression/task1.c)
add_executable(task2.4 Auditory_Exercises/4.If_&_else_statements_&_switch_expression/task2.c)
add_executable(task3.4 Auditory_Exercises/4.If_&_else_statements_&_switch_expression/task3.c)
add_executable(task4.4 Auditory_Exercises/4.If_&_else_statements_&_switch_expression/task4.c)
add_executable(task5.4 Auditory_Exercises/4.If_&_else_statements_&_switch_expression/task5.c)
add_executable(task6.4 Auditory_Exercises/4.If_&_else_statements_&_switch_expression/task6.c)
add_executable(task7.4 Auditory_Exercises/4.If_&_else_statements_&_switch_expression/task7.c)
add_executable(task8.4 Auditory_Exercises/4.If_&_else_statements_&_switch_expression/task8.c)
add_executable(task9.4 Auditory_Exercises/4.If_&_else_statements_&_switch_expression/task9.c)
add_executable(task10.4 Auditory_Exercises/4.If_&_else_statements_&_switch_expression/task10.c)
add_executable(task1.5 Auditory_Exercises/5.Loops/task1.c)
add_executable(task2.5 Auditory_Exercises/5.Loops/task2.c)
add_executable(task3.5 Auditory_Exercises/5.Loops/task3.c)
add_executable(task4.5 Auditory_Exercises/5.Loops/task4.c)
add_executable(task5.5 Auditory_Exercises/5.Loops/task5.c)
add_executable(task6.5 Auditory_Exercises/5.Loops/task6.c)
add_executable(task7.5 Auditory_Exercises/5.Loops/task7.c)
add_executable(task8.5 Auditory_Exercises/5.Loops/task8.c)
add_executable(task9.5 Auditory_Exercises/5.Loops/task9.c)
add_executable(task10.5 Auditory_Exercises/5.Loops/task10.c)
add_executable(task11.5 Auditory_Exercises/5.Loops/task11.c)
add_executable(task12.5 Auditory_Exercises/5.Loops/task12.c)
add_executable(task13.5 Auditory_Exercises/5.Loops/task13.c)
add_executable(task1.6 Auditory_Exercises/6.Arrays/task1.c)
add_executable(task2.6 Auditory_Exercises/6.Arrays/task2.c)
add_executable(task3.6 Auditory_Exercises/6.Arrays/task3.c)
add_executable(task4.6 Auditory_Exercises/6.Arrays/task4.c)
add_executable(task5.6 Auditory_Exercises/6.Arrays/task5.c)
add_executable(task6.6 Auditory_Exercises/6.Arrays/task6.c)
add_executable(task7.6 Auditory_Exercises/6.Arrays/task7.c)
add_executable(task1.7 Auditory_Exercises/7.Matrices/task1.c)
add_executable(task2.7 Auditory_Exercises/7.Matrices/task2.c)
add_executable(task3.7 Auditory_Exercises/7.Matrices/task3.c)
add_executable(task1.8 Auditory_Exercises/8.Functions_Recursions/task1.c)
add_executable(task2.8 Auditory_Exercises/8.Functions_Recursions/task2.c)
add_executable(task3.8 Auditory_Exercises/8.Functions_Recursions/task3.c)
add_executable(task4.8 Auditory_Exercises/8.Functions_Recursions/task4.c)
add_executable(task5.8 Auditory_Exercises/8.Functions_Recursions/task5.c)
add_executable(task6.8 Auditory_Exercises/8.Functions_Recursions/task6.c)
add_executable(taskR1.8 Auditory_Exercises/8.Functions_Recursions/taskR1.c)
add_executable(taskR2.8 Auditory_Exercises/8.Functions_Recursions/taskR2.c)
add_executable(taskR3.8 Auditory_Exercises/8.Functions_Recursions/taskR3.c)
add_executable(taskR4.8 Auditory_Exercises/8.Functions_Recursions/taskR4.c)
add_executable(taskR5.8 Auditory_Exercises/8.Functions_Recursions/taskR5.c)
add_executable(taskR6.8 Auditory_Exercises/8.Functions_Recursions/taskR6.c)
add_executable(taskR7.8 Auditory_Exercises/8.Functions_Recursions/taskR7.c)
add_executable(task1.9 Auditory_Exercises/9.Pointers/task1.c)
add_executable(task2.9 Auditory_Exercises/9.Pointers/task2.c)
add_executable(PointerExample1 Auditory_Exercises/9.Pointers/Pointer_Example1.c)
add_executable(PointerExample2 Auditory_Exercises/9.Pointers/Pointer_Example2.c)
add_executable(Linear_Binary_Search Auditory_Exercises/9.Pointers/Linear_&_Binary_Search.c)
add_executable(BubbleSort Auditory_Exercises/9.Pointers/BubbleSort.c)
add_executable(task1.10 Auditory_Exercises/10.Strings/task1.c)
add_executable(task2.10 Auditory_Exercises/10.Strings/task2.c)
add_executable(task3.10 Auditory_Exercises/10.Strings/task3.c)
add_executable(task4.10 Auditory_Exercises/10.Strings/task4.c)
add_executable(task5.10 Auditory_Exercises/10.Strings/task5.c)
add_executable(task6.10 Auditory_Exercises/10.Strings/task6.c)
add_executable(task7.10 Auditory_Exercises/10.Strings/task7.c)
add_executable(task8.10 Auditory_Exercises/10.Strings/task8.c)
add_executable(task9.10 Auditory_Exercises/10.Strings/task9.c)
add_executable(task1.11 Auditory_Exercises/11.Files/task1.c)
add_executable(task2.11 Auditory_Exercises/11.Files/task2.c)
add_executable(task3.11 Auditory_Exercises/11.Files/task3.c)
add_executable(task4.11 Auditory_Exercises/11.Files/task4.c)
add_executable(task5.11 Auditory_Exercises/11.Files/task5.c)
add_executable(task6.11 Auditory_Exercises/11.Files/task6.c)

add_executable(task1.L1 Lab_Exercises/Lab_1/task1.c)
add_executable(task2.L1 Lab_Exercises/Lab_1/task2.c)
add_executable(task3.L1 Lab_Exercises/Lab_1/task3.c)
add_executable(task1.L2 Lab_Exercises/Lab_2/task1.c)
add_executable(task2.L2 Lab_Exercises/Lab_2/task2.c)
add_executable(task3.L2 Lab_Exercises/Lab_2/task3.c)
add_executable(task1.L3 Lab_Exercises/Lab_3/task1.c)
add_executable(task2.L3 Lab_Exercises/Lab_3/task2.c)
add_executable(task3.L3 Lab_Exercises/Lab_3/task3.c)
add_executable(task1.L4 Lab_Exercises/Lab_4/task1.c)
add_executable(task2.L4 Lab_Exercises/Lab_4/task2.c)
add_executable(task3.L4 Lab_Exercises/Lab_4/task3.c)
add_executable(task1.L5 Lab_Exercises/Lab_5/task1.c)
add_executable(task2.L5 Lab_Exercises/Lab_5/task2.c)
add_executable(task3.L5 Lab_Exercises/Lab_5/task3.c)
add_executable(task1.L6 Lab_Exercises/Lab_6/task1.c)
add_executable(task2.L6 Lab_Exercises/Lab_6/task2.c)
add_executable(task3.L6 Lab_Exercises/Lab_6/task3.c)
add_executable(task1.L7 Lab_Exercises/Lab_7/task1.c)
add_executable(task2.L7 Lab_Exercises/Lab_7/task2.c)
add_executable(task3.L7 Lab_Exercises/Lab_7/task3.c)
add_executable(task1.L8 Lab_Exercises/Lab_8/task1.c)
add_executable(task2.L8 Lab_Exercises/Lab_8/task2.c)
add_executable(task3.L8 Lab_Exercises/Lab_8/task3.c)
add_executable(task1.L9 Lab_Exercises/Lab_9/task1.c)
add_executable(task2.L9 Lab_Exercises/Lab_9/task2.c)
add_executable(task3.L9 Lab_Exercises/Lab_9/task3.c)
add_executable(task1.L10 Lab_Exercises/Lab_10/task1.c)
add_executable(task2.L10 Lab_Exercises/Lab_10/task2.c)
add_executable(task3.L10 Lab_Exercises/Lab_10/task3.c)





add_executable(task1.1st Exams/1st_midterm/task1.c)
add_executable(task2.1st Exams/1st_midterm/task2.c)
add_executable(task3.1st Exams/1st_midterm/task3.c)
add_executable(task4.1st Exams/1st_midterm/task4.c)
add_executable(task5.1st Exams/1st_midterm/task5.c)
add_executable(task6.1st Exams/1st_midterm/task6.c)
add_executable(task7.1st Exams/1st_midterm/task7.c)
add_executable(task8.1st Exams/1st_midterm/task8.c)
add_executable(task9.1st Exams/1st_midterm/task9.c)
add_executable(task10.1st Exams/1st_midterm/task10.c)
add_executable(task11.1st Exams/1st_midterm/task11.c)
add_executable(task12.1st Exams/1st_midterm/task12.c)
add_executable(task13.1st Exams/1st_midterm/task13.c)
add_executable(task14.1st Exams/1st_midterm/task14.c)
add_executable(task15.1st Exams/1st_midterm/task15.c)
add_executable(task16.1st Exams/1st_midterm/task16.c)
add_executable(task17.1st Exams/1st_midterm/task17.c)
add_executable(task18.1st Exams/1st_midterm/task18.c)
add_executable(task19.1st Exams/1st_midterm/task19.c)
add_executable(task20.1st Exams/1st_midterm/task20.c)
add_executable(task21.1st Exams/1st_midterm/task21.c)
add_executable(task22.1st Exams/1st_midterm/task22.c)
add_executable(task23.1st Exams/1st_midterm/task23.c)
add_executable(task24.1st Exams/1st_midterm/task24.c)
add_executable(task25.1st Exams/1st_midterm/task25.c)
add_executable(task26.1st Exams/1st_midterm/task26.c)
add_executable(task27.1st Exams/1st_midterm/task27.c)
add_executable(task28.1st Exams/1st_midterm/task28.c)
add_executable(task29.1st Exams/1st_midterm/task29.c)
add_executable(task30.1st Exams/1st_midterm/task30.c)
add_executable(task31.1st Exams/1st_midterm/task31.c)
add_executable(task32.1st Exams/1st_midterm/task32.c)
add_executable(task33.1st Exams/1st_midterm/task33.c)
add_executable(task34.1st Exams/1st_midterm/task34.c)
add_executable(task35.1st Exams/1st_midterm/task35.c)
add_executable(task36.1st Exams/1st_midterm/task36.c)
add_executable(task37.1st Exams/1st_midterm/task37.c)
add_executable(task38.1st Exams/1st_midterm/task38.c)
add_executable(task39.1st Exams/1st_midterm/task39.c)
add_executable(task40.1st Exams/1st_midterm/task40.c)
add_executable(task41.1st Exams/1st_midterm/task41.c)
add_executable(task42.1st Exams/1st_midterm/task42.c)
add_executable(task43.1st Exams/1st_midterm/task43.c)
add_executable(M1st1 Exams/1st_midterm/1stMidterm2022_task1.c)
add_executable(M1st2 Exams/1st_midterm/1stMidterm2022_task2.c)


add_executable(task1.2ndE Exams/2nd_midterm_and_exams/task1.c)
add_executable(task2.2ndE Exams/2nd_midterm_and_exams/task2.c)
add_executable(task3.2ndE Exams/2nd_midterm_and_exams/task3.c)
add_executable(task4.2ndE Exams/2nd_midterm_and_exams/task4.c)
add_executable(task5.2ndE Exams/2nd_midterm_and_exams/task5.c)
add_executable(task6.2ndE Exams/2nd_midterm_and_exams/task6.c)
add_executable(task7.2ndE Exams/2nd_midterm_and_exams/task7.c)
add_executable(task8.2ndE Exams/2nd_midterm_and_exams/task8.c)
add_executable(task9.2ndE Exams/2nd_midterm_and_exams/task9.c)
add_executable(task10.2ndE Exams/2nd_midterm_and_exams/task10.c)
add_executable(task11.2ndE Exams/2nd_midterm_and_exams/task11.c)
add_executable(task12.2ndE Exams/2nd_midterm_and_exams/task12.c)
add_executable(task13.2ndE Exams/2nd_midterm_and_exams/task13.c)
add_executable(task14.2ndE Exams/2nd_midterm_and_exams/task14.c)
add_executable(task15.2ndE Exams/2nd_midterm_and_exams/task15.c)
add_executable(task16.2ndE Exams/2nd_midterm_and_exams/task16.c)
add_executable(task17.2ndE Exams/2nd_midterm_and_exams/task17.c)
add_executable(task18.2ndE Exams/2nd_midterm_and_exams/task18.c)
add_executable(task19.2ndE Exams/2nd_midterm_and_exams/task19.c)
add_executable(task20.2ndE Exams/2nd_midterm_and_exams/task20.c)
add_executable(task21.2ndE Exams/2nd_midterm_and_exams/task21.c)
add_executable(task22.2ndE Exams/2nd_midterm_and_exams/task22.c)
add_executable(task23.2ndE Exams/2nd_midterm_and_exams/task23.c)
add_executable(task24.2ndE Exams/2nd_midterm_and_exams/task24.c)
add_executable(task25.2ndE Exams/2nd_midterm_and_exams/task25.c)
add_executable(task26.2ndE Exams/2nd_midterm_and_exams/task26.c)
add_executable(task27.2ndE Exams/2nd_midterm_and_exams/task27.c)
add_executable(task28.2ndE Exams/2nd_midterm_and_exams/task28.c)
add_executable(task29.2ndE Exams/2nd_midterm_and_exams/task29.c)
add_executable(task30.2ndE Exams/2nd_midterm_and_exams/task30.c)
add_executable(task31.2ndE Exams/2nd_midterm_and_exams/task31.c)
add_executable(task32.2ndE Exams/2nd_midterm_and_exams/task32.c)
add_executable(task33.2ndE Exams/2nd_midterm_and_exams/task33.c)
add_executable(task34.2ndE Exams/2nd_midterm_and_exams/task34.c)
add_executable(task35.2ndE Exams/2nd_midterm_and_exams/task35.c)
add_executable(task36.2ndE Exams/2nd_midterm_and_exams/task36.c)
add_executable(task37.2ndE Exams/2nd_midterm_and_exams/task37.c)
add_executable(task38.2ndE Exams/2nd_midterm_and_exams/task38.c)
add_executable(task39.2ndE Exams/2nd_midterm_and_exams/task39.c)
add_executable(task40.2ndE Exams/2nd_midterm_and_exams/task40.c)
add_executable(task41.2ndE Exams/2nd_midterm_and_exams/task41.c)
add_executable(task42.2ndE Exams/2nd_midterm_and_exams/task42.c)
add_executable(task43.2ndE Exams/2nd_midterm_and_exams/task43.c)
add_executable(task44.2ndE Exams/2nd_midterm_and_exams/task44.c)
add_executable(task45.2ndE Exams/2nd_midterm_and_exams/task45.c)
add_executable(task46.2ndE Exams/2nd_midterm_and_exams/task46.c)

add_executable(GR11 Exams/2nd_midterm_and_exams/Exam2022_Group1_task1.c)
add_executable(GR12 Exams/2nd_midterm_and_exams/Exam2022_Group1_task2.c)
add_executable(GR13 Exams/2nd_midterm_and_exams/Exam2022_Group1_task3.c)
add_executable(GR21 Exams/2nd_midterm_and_exams/Exam2022_Group2_task1.c)
add_executable(GR22 Exams/2nd_midterm_and_exams/Exam2022_Group2_task2.c)
add_executable(GR23 Exams/2nd_midterm_and_exams/Exam2022_Group2_task3.c)
